# Libffi

./: CMakeLists.txt
cmake/: Config.cmake.in
include/: ffi.h.in  ffi_cfi.h  ffi_common.h  fficonfig.h.in
source/: dlmalloc.c  ffi64.c  ffiw64.c
